# gmg

./: .env  .eslintrc.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ROADMAP.md  babel.cfg  circle.yml  cli.py  gmg.py  gunicorn.conf.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  rollup.config.js  run.py  setup.cfg  supervisord.conf  tailwind.config.js  update_l10n.sh  uwsgi.ini
.github/workflows/: deploy.yml  deployment.yml  testing.yml
data/: records.xml
gmgl/: __init__.py  addons.py  babel_js.py  configs.py  forms.py  http.py  json_encoder.py  utils.py
gmgl/analyzers/: __init__.py  mv.py
gmgl/nlp/: __init__.py  knowledge.py  spacy.py
gmgl/sqlalchemy/: __init__.py  database.py  types.py  xml_loader.py
migrations/: env.py
migrations/versions/: 496b5ff1f674_imp_indexes_and_event_type_applied_field.py  50f03b109fef_restore_avatar_url_field.py  5d9ab6cd8638_use_blob.py  770b8fc7b0ee_imp_add_web_event_index.py  8e878081ba47_fix_web_event_avatar_change.py  9d7434856f9c_imp_create_model_record_metadata.py  9fa02b066d0d_initial_migration.py  a4ac5c97faa6_imp_add_iref_col.py  a72aed44445e_imp_nullable_iref.py  c5454911444d_imp_analyzer_web_event.py  e072cefe0463_multi_records.py
routes/: __init__.py  admin.py  public.py  static.py
static/css/: app.css
static/js/: main.js
templates/: minimal_layout.html.j2  minimal_modal.html.j2
templates/includes/: nav.html.j2  panel.html.j2  (+1 more)
tests/: conftest.py  test_admin_post.py  test_model.py  test_public_get.py  test_public_post.py
tools/: __init__.py  banned_list.py  banner_generator.py
(+30 files in other folders)
